--- a/Lesson2-1.ipynb
+++ b/Lesson2-1.ipynb
@@ -33,6 +33,46 @@
    "source": [
     "print((2+3)*4)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "17\n"
+     ]
+    }
+   ],
+   "source": [
+    "n=1+5\n",
+    "m = n +5\n",
+    "print(n + m) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "55.0"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x=input(\"Press Enter to continue...\")\n",
+    "float(x) + 10"
+   ]
   }
  ],
  "metadata": {
