--- a/Lesson2-1.ipynb
+++ b/Lesson2-1.ipynb
@@ -55,23 +55,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "55.0"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'str'>\n"
+     ]
     }
    ],
    "source": [
     "x=input(\"Press Enter to continue...\")\n",
-    "float(x) + 10"
+    "print(type (x))\n",
+    "result  = float(x) + 10"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4-7-45.0-hello.\n"
+     ]
+    }
+   ],
+   "source": [
+    "raduus = float(input('Enter the radius of the circle: '))\n",
+    "print(4,7,raduus,'hello',sep='-',end='.\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3+5+8\n",
+      "3+4+9\n",
+      "\n",
+      "9+9=18\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"3+5+8\")\n",
+    "print(\"3+4+9\")\n",
+    "print()\n",
+    "print(\"9+9=18\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"3+5+8\")\n",
+    "print(\"3+4+9\")\n",
+    "print()\n",
+    "print(\"9+9=18\")"
    ]
   }
  ],
