--- a/Lesson2-1.ipynb
+++ b/Lesson2-1.ipynb
@@ -120,10 +120,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The diameter is: 200.0\n",
+      "The circumference is: 628.318\n",
+      "The area is: 31415.926585\n",
+      "The diameter is: 200.0 The circumference is: 628.318 The area is: 31415.926585\n"
+     ]
+    }
+   ],
+   "source": [
+    "radius = float(input(\"Press Enter to continue...\"))\n",
+    "dia = 2 * radius\n",
+    "circumference = 2 * 3.14159 * radius\n",
+    "area = 3.1415926585 * radius ** 2\n",
+    "print(\"The diameter is:\",dia)\n",
+    "print(\"The circumference is:\",circumference)\n",
+    "print(\"The area is:\",area)\n",
+    "print(\"The diameter is:\",dia,\"The circumference is:\",circumference,\"The area is:\",area)\n"
+   ]
   },
   {
    "cell_type": "code",
