--- a/Lesson2-1.ipynb
+++ b/Lesson2-1.ipynb
@@ -150,25 +150,37 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "print(\"3+5+8\")\n",
     "print(\"3+4+9\")\n",
     "print()\n",
     "print(\"9+9=18\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "對邊長: 3.0\n",
+      "另一邊長: 4.0\n",
+      "斜邊長: 5.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "side = float(input(\"Enter the side of the square: \"))\n",
+    "another_side = float(input(\"Enter the other side of the square: \"))\n",
+    "each_side = math.sqrt((side**2)+(another_side**2))\n",
+    "print(\"對邊長:\",side)\n",
+    "print(\"另一邊長:\",another_side)\n",
+    "print(\"斜邊長:\",each_side)\n",
+    "\n"
    ]
   }
  ],
