--- a/Lesson2-1.ipynb
+++ b/Lesson2-1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -79,14 +79,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4-7-45.0-hello.\n"
+     "ename": "ValueError",
+     "evalue": "could not convert string to float: ''",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[26], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m raduus \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mfloat\u001b[39m(\u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mEnter the radius of the circle: \u001b[39m\u001b[38;5;124m'\u001b[39m))\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;241m4\u001b[39m,\u001b[38;5;241m7\u001b[39m,raduus,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mhello\u001b[39m\u001b[38;5;124m'\u001b[39m,sep\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m-\u001b[39m\u001b[38;5;124m'\u001b[39m,end\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m.\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[1;31mValueError\u001b[0m: could not convert string to float: ''"
      ]
     }
    ],
@@ -120,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -180,6 +184,63 @@
     "print(\"對邊長:\",side)\n",
     "print(\"另一邊長:\",another_side)\n",
     "print(\"斜邊長:\",each_side)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "data are :  [10 20 30 40 50]\n",
+      "數據的標準差是: 14.142135623730951\n",
+      "樣本標準差是: 15.811388300841896\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "# 創建一個數字陣列\n",
+    "data = np.array([10, 20, 30, 40, 50])\n",
+    "\n",
+    "# 計算標準差\n",
+    "std_deviation = np.std(data)\n",
+    "sample_std_deviation = np.std(data, ddof=1)\n",
+    "\n",
+    "print(\"data are : \", data)\n",
+    "print(f\"數據的標準差是: {std_deviation}\")\n",
+    "print(f\"樣本標準差是: {sample_std_deviation}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'list'>\n",
+      "[2, 8, 9]\n",
+      "<class 'tuple'>\n",
+      "(2, 8, 9)\n"
+     ]
+    }
+   ],
+   "source": [
+    "LUCKY_NUMBER = [2,8,9]\n",
+    "print(type(LUCKY_NUMBER))\n",
+    "print(LUCKY_NUMBER)\n",
+    "sum(LUCKY_NUMBER)\n",
+    "LUCKY_NUMBER1 = (2,8,9)\n",
+    "print(type(LUCKY_NUMBER1))\n",
+    "print(LUCKY_NUMBER1) #tuple 不可變更 讀寫速度快 但是不能增加刪除修改\n",
     "\n"
    ]
   }
