--- a/Lesson2-1.ipynb
+++ b/Lesson2-1.ipynb
@@ -243,6 +243,45 @@
     "print(LUCKY_NUMBER1) #tuple 不可變更 讀寫速度快 但是不能增加刪除修改\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "8\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(LUCKY_NUMBER[0])\n",
+    "print(LUCKY_NUMBER[1])\n",
+    "print(LUCKY_NUMBER[2])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "LUCKY_NUMBER[0] = 3\n",
+    "print(LUCKY_NUMBER[0])"
+   ]
   }
  ],
  "metadata": {
