--- a/Lesson2-1.ipynb
+++ b/Lesson2-1.ipynb
@@ -282,6 +282,32 @@
     "LUCKY_NUMBER[0] = 3\n",
     "print(LUCKY_NUMBER[0])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[89, 76, 92, 76, 89]\n",
+      "[67, 87, 92, 69, 92]\n",
+      "[[67, 87, 92, 69, 92], [89, 76, 92, 76, 89]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# list in list\n",
+    "students = [\n",
+    "    [67,87,92,69,92],\n",
+    "    [89,76,92,76,89]\n",
+    "]\n",
+    "print(students[1])\n",
+    "print(students[0])\n",
+    "print(students)"
+   ]
   }
  ],
  "metadata": {
@@ -300,7 +326,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "undefined.undefined.undefined"
   }
  },
  "nbformat": 4,
