--- a/Lesson3-2.ipynb
+++ b/Lesson3-2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "{'name': '學生A', 'age': 18, 'city': '台北市'}"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -61,6 +61,82 @@
     "del p1['city']\n",
     "print (p1)\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1 - 如何依序取出串列資料和映射資料的元素值\n",
+    "\n",
+    "2 - for_in 迴圈\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "apple\n",
+      "banana\n",
+      "orange\n"
+     ]
+    }
+   ],
+   "source": [
+    "fruits = ['apple', 'banana', 'orange']\n",
+    "for fruit in fruits:\n",
+    "    print(fruit)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0, 'apple')\n",
+      "(1, 'banana')\n",
+      "(2, 'orange')\n"
+     ]
+    }
+   ],
+   "source": [
+    "for fruit in enumerate(fruits):\n",
+    "    print (fruit)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0->apple\n",
+      "================\n",
+      "1->banana\n",
+      "================\n",
+      "2->orange\n",
+      "================\n"
+     ]
+    }
+   ],
+   "source": [
+    "for index, fruit in enumerate(fruits):\n",
+    "    print (index, fruit, sep='->')\n",
+    "    print (\"================\")\n"
    ]
   }
  ],
