--- a/Lesson4-2.ipynb
+++ b/Lesson4-2.ipynb
@@ -2,17 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
-    "file = open(file='f:\\students.txt', encoding='utf-8')\n",
+    "file = open(file='students.txt', encoding='utf-8')\n",
     "file.close()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -74,14 +74,14 @@
     }
    ],
    "source": [
-    "with open(file='f:\\students.txt', encoding='utf-8') as file:\n",
+    "with open(file='students.txt', encoding='utf-8') as file:\n",
     "    content:str = file.read()\n",
     "    print(content)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,7 @@
     }
    ],
    "source": [
-    "with open(file='f:\\students.txt', encoding='utf-8') as file:\n",
+    "with open(file='students.txt', encoding='utf-8') as file:\n",
     "   lines:list[str] = file.readlines()\n",
     "   print(lines)\n",
     "    "
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
    ],
    "source": [
     "import csv\n",
-    "with open(file='f:\\students.txt',encoding='utf-8') as file:\n",
+    "with open(file='students.txt',encoding='utf-8') as file:\n",
     "    reader = csv.reader(file)\n",
     "    #next(reader) 跳過第一行行\n",
     "    students:list = list(reader)\n",
@@ -123,6 +123,38 @@
     "    if student[0] == '姓名:student1':\n",
     "        print(student)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'student20', 'chinese': '69', 'english': '75', 'math': '87', 'history': '79', 'health': '55'}\n",
+      "{'name': 'student20', 'chinese': '69', 'english': '75', 'math': '87', 'history': '79', 'health': '55'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import csv\n",
+    "with open(file='student.csv',encoding='utf-8') as file:\n",
+    "    reader = csv.DictReader(file)\n",
+    "    students = list(reader)\n",
+    "\n",
+    "for student in students:\n",
+    "    if student['name'] == 'student20':\n",
+    "        print(student)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
