--- a/Lesson6-1.ipynb
+++ b/Lesson6-1.ipynb
@@ -12,11 +12,108 @@
     "response = requests.get(url)\n",
     "print(response.text)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'bs4.element.Tag'>\n",
+      "{'class': ['a1']}\n",
+      "h1\n",
+      "Hello, BeautifulSoup!\n",
+      "Hello, BeautifulSoup!\n",
+      "Hello, BeautifulSoup!\n"
+     ]
+    }
+   ],
+   "source": [
+    "from bs4 import BeautifulSoup\n",
+    "html = '''\n",
+    "<html>\n",
+    "    <body>\n",
+    "        <h1 class=\"a1\">Hello, BeautifulSoup!</h1>\n",
+    "    </body>\n",
+    "</html>\n",
+    "'''\n",
+    "\n",
+    "soup = BeautifulSoup(html, \"html.parser\")\n",
+    "h1_element = soup.h1\n",
+    "print(type(h1_element))\n",
+    "print(h1_element.attrs)\n",
+    "print(h1_element.name)\n",
+    "print(h1_element.get_text())\n",
+    "print(h1_element.string)\n",
+    "print(h1_element.text)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'bs4.element.Tag'>\n",
+      "{'class': ['content']}\n",
+      "p\n",
+      "This is a paragraph.\n",
+      "This is a paragraph.\n",
+      "This is a paragraph.\n"
+     ]
+    }
+   ],
+   "source": [
+    "html = \"<html><body><p class='content'>This is a paragraph.</p></body></html>\"\n",
+    "soup = BeautifulSoup(html, \"html.parser\")\n",
+    "p_tag = soup.find(\"p\")  # 找到第一個 <p> 標籤\n",
+    "print(type(p_tag))\n",
+    "print(p_tag.attrs)\n",
+    "print(p_tag.name)\n",
+    "print(p_tag.get_text())\n",
+    "print(p_tag.string)\n",
+    "print(p_tag.text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Paragraph 1\n",
+      "Paragraph 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "html = \"\"\"\n",
+    "<html>\n",
+    "    <body>\n",
+    "        <p class='content'>Paragraph 1</p>\n",
+    "        <p class='content'>Paragraph 2</p>\n",
+    "    </body>\n",
+    "</html>\n",
+    "\"\"\"\n",
+    "soup = BeautifulSoup(html, \"html.parser\")\n",
+    "p_elements = soup.find_all(\"p\", class_=\"content\")  # 找到所有 class 為 content 的 <p> 標籤\n",
+    "for elem in p_elements:\n",
+    "    print(elem.string)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -30,7 +127,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
