--- a/Lesson8-2.ipynb
+++ b/Lesson8-2.ipynb
@@ -170,6 +170,174 @@
     "df2 = df1.reindex(columns=['公司代號','出表日期','公司名稱','產業別','營業收入-當月營收','營業收入-上月營收'])\n",
     "df2.query('產業別==\"水泥工業\"')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>公司代號</th>\n",
+       "      <th>出表日期</th>\n",
+       "      <th>公司名稱</th>\n",
+       "      <th>產業別</th>\n",
+       "      <th>當月營收</th>\n",
+       "      <th>上月營收</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1102</td>\n",
+       "      <td>1110912</td>\n",
+       "      <td>亞泥</td>\n",
+       "      <td>水泥工業</td>\n",
+       "      <td>7069221</td>\n",
+       "      <td>7864622</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1108</td>\n",
+       "      <td>1110912</td>\n",
+       "      <td>幸福</td>\n",
+       "      <td>水泥工業</td>\n",
+       "      <td>390053</td>\n",
+       "      <td>326691</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1109</td>\n",
+       "      <td>1110912</td>\n",
+       "      <td>信大</td>\n",
+       "      <td>水泥工業</td>\n",
+       "      <td>478276</td>\n",
+       "      <td>557403</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1110</td>\n",
+       "      <td>1110912</td>\n",
+       "      <td>東泥</td>\n",
+       "      <td>水泥工業</td>\n",
+       "      <td>176935</td>\n",
+       "      <td>134470</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1213</td>\n",
+       "      <td>1110912</td>\n",
+       "      <td>大飲</td>\n",
+       "      <td>食品工業</td>\n",
+       "      <td>38696</td>\n",
+       "      <td>29503</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>834</th>\n",
+       "      <td>9942</td>\n",
+       "      <td>1110912</td>\n",
+       "      <td>茂順</td>\n",
+       "      <td>其他</td>\n",
+       "      <td>352730</td>\n",
+       "      <td>349111</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>835</th>\n",
+       "      <td>9943</td>\n",
+       "      <td>1110912</td>\n",
+       "      <td>好樂迪</td>\n",
+       "      <td>觀光事業</td>\n",
+       "      <td>212912</td>\n",
+       "      <td>197756</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>836</th>\n",
+       "      <td>9944</td>\n",
+       "      <td>1110912</td>\n",
+       "      <td>新麗</td>\n",
+       "      <td>其他</td>\n",
+       "      <td>179660</td>\n",
+       "      <td>231139</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>837</th>\n",
+       "      <td>9955</td>\n",
+       "      <td>1110912</td>\n",
+       "      <td>佳龍</td>\n",
+       "      <td>其他</td>\n",
+       "      <td>81881</td>\n",
+       "      <td>85625</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>838</th>\n",
+       "      <td>9958</td>\n",
+       "      <td>1110912</td>\n",
+       "      <td>世紀鋼</td>\n",
+       "      <td>鋼鐵工業</td>\n",
+       "      <td>757968</td>\n",
+       "      <td>651699</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>837 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     公司代號     出表日期 公司名稱   產業別     當月營收     上月營收\n",
+       "0    1102  1110912   亞泥  水泥工業  7069221  7864622\n",
+       "1    1108  1110912   幸福  水泥工業   390053   326691\n",
+       "2    1109  1110912   信大  水泥工業   478276   557403\n",
+       "3    1110  1110912   東泥  水泥工業   176935   134470\n",
+       "4    1213  1110912   大飲  食品工業    38696    29503\n",
+       "..    ...      ...  ...   ...      ...      ...\n",
+       "834  9942  1110912   茂順    其他   352730   349111\n",
+       "835  9943  1110912  好樂迪  觀光事業   212912   197756\n",
+       "836  9944  1110912   新麗    其他   179660   231139\n",
+       "837  9955  1110912   佳龍    其他    81881    85625\n",
+       "838  9958  1110912  世紀鋼  鋼鐵工業   757968   651699\n",
+       "\n",
+       "[837 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2.rename(columns={\n",
+    "    '營業收入-上月營收':'上月營收',\n",
+    "    '營業收入-當月營收':'當月營收'\n",
+    "    })"
+   ]
   }
  ],
  "metadata": {
