--- a/Lesson8-2.ipynb
+++ b/Lesson8-2.ipynb
@@ -338,6 +338,47 @@
     "    '營業收入-當月營收':'當月營收'\n",
     "    })"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 839 entries, 0 to 838\n",
+      "Data columns (total 14 columns):\n",
+      " #   Column            Non-Null Count  Dtype  \n",
+      "---  ------            --------------  -----  \n",
+      " 0   出表日期              839 non-null    int64  \n",
+      " 1   資料年月              839 non-null    int64  \n",
+      " 2   公司代號              839 non-null    int64  \n",
+      " 3   公司名稱              839 non-null    object \n",
+      " 4   產業別               839 non-null    object \n",
+      " 5   營業收入-當月營收         839 non-null    int64  \n",
+      " 6   營業收入-上月營收         839 non-null    int64  \n",
+      " 7   營業收入-去年當月營收       839 non-null    int64  \n",
+      " 8   營業收入-上月比較增減(%)    837 non-null    float64\n",
+      " 9   營業收入-去年同月增減(%)    838 non-null    float64\n",
+      " 10  累計營業收入-當月累計營收     839 non-null    int64  \n",
+      " 11  累計營業收入-去年累計營收     839 non-null    int64  \n",
+      " 12  累計營業收入-前期比較增減(%)  838 non-null    float64\n",
+      " 13  備註                839 non-null    object \n",
+      "dtypes: float64(3), int64(8), object(3)\n",
+      "memory usage: 91.9+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.read_csv('上市公司資料.csv')\n",
+    "df.info()\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
